--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,5 +19,6 @@ android {
 }
 
 dependencies {
+    compile 'com.google.android.gms:play-services-gcm:8.3.0',
     compile 'com.facebook.react:react-native:0.11.+'
 }
