fixed react-native-windows path definition

--- a/windows/RNDeviceInfo/project.json
+++ b/windows/RNDeviceInfo/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "WinRTXamlToolkit": "2.0.0"
   },
   "frameworks": {
     "uap10.0": {}
