--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "0.58.6"
+    "react-native": "0.58.6",
+    "react-native-device-info": "^0.28.0"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
