--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {        googlePlayServicesVersion = "16.1.0"
+    ext {
         buildToolsVersion = "28.0.2"
         minSdkVersion = 16
         compileSdkVersion = 28
