--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/react-native-community/react-native-device-info"
   },
   "scripts": {
+    "ts-check": "npx tsc deviceinfo.d.ts --noEmit",
     "flow-check": "npx flow check-contents < deviceinfo.js.flow",
     "shipit": "np"
   },
@@ -44,6 +45,7 @@
   "devDependencies": {
     "flow-bin": "^0.96.0",
     "np": "^2.16.0",
-    "prettier": "^1.10.2"
+    "prettier": "^1.10.2",
+    "typescript": "^3.4.1"
   }
 }
