--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
     implementation "com.google.android.gms:play-services-gcm:${safeExtGet('googlePlayServicesVersion', '16.1.0')}"
     //noinspection GradleCompatible
-    implementation "com.android.support:appcompat-v7:${safeExtGet('supportLibVersion', '28.0.0')}"
-    implementation "com.android.support:support-v4:${safeExtGet('supportLibVersion', '28.0.0')}"
-    implementation "com.android.support:support-media-compat:${safeExtGet('supportLibVersion', '28.0.0')}"
+    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "androidx.media:media:1.0.0"
 }
