Revert "Aditional checking emulator"

--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'example'
-apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
+include ':react-native-device-info'
+project(':react-native-device-info').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-device-info/android')
+
 include ':app'
