--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,13 +45,13 @@ dependencies {
     def supportLibMajorVersion = supportLibVersion.split('\\.')[0] as int
     def appCompatLibName =  (supportLibMajorVersion < 20) ? "androidx.appcompat:appcompat" : "com.android.support:appcompat-v7"
     def supportV4LibName =  (supportLibMajorVersion < 20) ? "androidx.legacy:legacy-support-v4" : "com.android.support:support-v4"
-    def supportV4Version = safeExtGet('supportV4Version', safeExtGet('supportLibVersion', '28.0.0'))
+    def supportV4LibVersion = safeExtGet('supportV4LibVersion', safeExtGet('supportLibVersion', '28.0.0'))
     def mediaCompatLibName =  (supportLibMajorVersion < 20) ? "androidx.media:media" : "com.android.support:support-media-compat"
     def mediaCompatVersion = safeExtGet('mediaCompatVersion', safeExtGet('supportLibVersion', '28.0.0'))
 
     implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
     implementation "com.google.android.gms:play-services-gcm:${safeExtGet('googlePlayServicesVersion', '16.1.0')}"
     implementation "$appCompatLibName:$supportLibVersion"
-    implementation "$supportV4LibName:$supportV4Version"
+    implementation "$supportV4LibName:$supportV4LibVersion"
     implementation "$mediaCompatLibName:$mediaCompatVersion"
 }
