--- a/example/package.json
+++ b/example/package.json
@@ -7,25 +7,22 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "clean-modules": "rm -rf ./node_modules/react-native-device-info/{example,node_modules}",
-    "clean": "rm -rf ./node_modules ./ios/Pods",
-    "postinstall": "npm run clean-modules && npm run pod-install",
-    "pod-install": "cd ./ios && pod install && cd ..",
-    "reinstall": "npm run clean && npm run install"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.8.1",
-    "react-native": "0.61.2",
-    "react-native-device-info": "../"
+    "react": "16.9.0",
+    "react-native": "0.61.5",
+    "react-native-device-info": "github:react-native-community/react-native-device-info"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/runtime": "^7.5.0",
-    "@react-native-community/eslint-config": "^0.0.3",
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
-    "metro-react-native-babel-preset": "^0.51.1",
-    "react-test-renderer": "16.8.1"
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
