--- a/example-web/package.json
+++ b/example-web/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "cd .. && yarn && yarn build"
   },
   "dependencies": {
     "expo": "~36.0.0",
