Moved install of root project to preinstall

--- a/example-web/package.json
+++ b/example-web/package.json
@@ -7,7 +7,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "postinstall": "cd .. && yarn && yarn build",
+    "preinstall": "cd .. && yarn && yarn build",
     "deploy": "gh-pages -d web-build",
     "predeploy": "expo build:web"
   },
