--- a/android/build.gradle
+++ b/android/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     if(firebaseIidVersion){
         implementation "com.google.firebase:firebase-iid:$firebaseIidVersion"
     }else{
-        def iidVersion = safeExtGet('googlePlayServicesIidVersion', safeExtGet('googlePlayServicesVersion', '17.0.0'))
+        def iidVersion = safeExtGet('googlePlayServicesIidVersion', '17.0.0')
         implementation "com.google.android.gms:play-services-iid:$iidVersion"
     }
 
