--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
     }
   ],
   "license": "MIT",
+  "peerDependencies": {
+    "react-native": "*"
+  },
   "devDependencies": {
     "@react-native-community/bob": "^0.16.2",
     "@react-native-community/eslint-config": "2.0.0",
@@ -79,8 +82,9 @@
     "lint-staged": "^10.2.4",
     "np": "^6.3.1",
     "prettier": "^2.0.5",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "^16.13.1",
+    "react-native": "^0.62.2",
+    "react-native-windows": "0.62.4",
     "typescript": "^3.9.6"
   },
   "eslintConfig": {
