--- a/.gitignore
+++ b/.gitignore
@@ -66,8 +66,8 @@ examplern59
 lib/
 
 # Visual Studio build artifacts
-windows/RNDeviceInfo/.vs/*
-windows/RNDeviceInfo/bin/*
-windows/RNDeviceInfo/obj/*
+windows/RNDeviceInfo/bin
+windows/RNDeviceInfo/obj
 windows/.vs
 windows/packages
+windows/RNDeviceInfo/.vs/*
