Rename directory to apple and add macos references to appropiate spots

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "lib/module/index.js",
   "files": [
     "android/",
-    "ios/",
+    "apple/",
     "lib/",
     "src/",
     "web/",
@@ -24,8 +24,8 @@
     "analyze": "npm run ts-check && npm run flow-check",
     "flow-check": "npx flow-bin check-contents < src/index.js.flow",
     "ts-check": "npx tsc --noEmit",
-    "clean": "cd example && npx react-native-clean-project --keep-node-modules --remove-iOS-build --remove-iOS-pods --remove-android-build --clean-android-project --keep-brew --keep-pods && \\rm -fr ios/Pods",
-    "dev-sync": "npm run build && cp -r *podspec lib windows android ios src example/node_modules/react-native-device-info/",
+    "clean": "cd example && npx react-native-clean-project --keep-node-modules --remove-iOS-build --remove-iOS-pods --remove-android-build --clean-android-project --keep-brew --keep-pods && \\rm -fr apple/Pods",
+    "dev-sync": "npm run build && cp -r *podspec lib windows android apple src example/node_modules/react-native-device-info/",
     "lint": "npx eslint ./ --ignore-pattern example --ignore-pattern node_modules --fix --quiet",
     "shipit": "npm run clean && np",
     "test": "echo no tests defined",
@@ -45,6 +45,7 @@
     "ios",
     "android",
     "windows",
+    "macos",
     "device",
     "events",
     "cocoapod"
