--- a/example/package.json
+++ b/example/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "^0.62.2",
-    "react-native-windows": "^0.62.5",
-    "react-native-device-info": "github:react-native-community/react-native-device-info"
+    "react-native-windows": "^0.62.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
