--- a/example/package.json
+++ b/example/package.json
@@ -7,13 +7,14 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "windows": "react-native run-windows"
   },
   "dependencies": {
     "react": "16.13.1",
     "react-native": "^0.62.2",
-    "react-native-windows": "^0.62.5",
-    "react-native-device-info": "github:react-native-community/react-native-device-info"
+    "react-native-device-info": "github:react-native-community/react-native-device-info",
+    "react-native-windows": "^0.62.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
