--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,8 +7,10 @@ buildscript {
             google()
             jcenter()
         }
+        def buildGradleVersion = ext.has('buildGradlePluginVersion') ? ext.get('buildGradlePluginVersion') : '3.5.1'
+
         dependencies {
-            classpath 'com.android.tools.build:gradle:3.6.3'
+            classpath "com.android.tools.build:gradle:$buildGradleVersion"
         }
     }
 }
@@ -20,7 +22,7 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
-    compileSdkVersion safeExtGet('compileSdkVersion', 28)
+    compileSdkVersion safeExtGet('compileSdkVersion', 29)
 
     defaultConfig {
         minSdkVersion safeExtGet('minSdkVersion', 16)
@@ -51,7 +53,8 @@ dependencies {
     implementation "com.android.installreferrer:installreferrer:${safeExtGet('installReferrerVersion', '1.1.2')}"
     def firebaseIidVersion = safeExtGet('firebaseIidVersion', null)
     if(firebaseIidVersion){
-        implementation "com.google.firebase:firebase-iid:$firebaseIidVersion"
+        implementation platform("com.google.firebase:firebase-bom:${safeExtGet("firebaseBomVersion", "25.12.2")}")
+        implementation "com.google.firebase:firebase-iid:${safeExtGet("firebaseIidVersion", "20.2.3")}"
     }else{
         def iidVersion = safeExtGet('googlePlayServicesIidVersion', safeExtGet('googlePlayServicesVersion', '17.0.0'))
         implementation "com.google.android.gms:play-services-iid:$iidVersion"
