--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dev-sync": "npm run build && cp -r *podspec lib windows android ios src jest example/node_modules/react-native-device-info/",
     "lint": "npx eslint ./ --ignore-pattern example --ignore-pattern node_modules --fix --quiet",
     "shipit": "npm run clean && np",
-    "test": "echo no tests defined",
+    "test": "jest",
     "precommit": "lint-staged && npm run analyze",
     "build": "bob build",
     "prepare": "bob build"
