--- a/example/package.json
+++ b/example/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "appium": "appium",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
+    "test:windows": "yarn jest --config=./jest.windows.config.js",
     "lint": "eslint .",
     "windows": "react-native run-windows"
   },
@@ -20,11 +22,14 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "appium": "^1.18.3",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "selenium-appium": "^0.0.15",
+    "selenium-webdriver": "^4.0.0-alpha.7"
   },
   "jest": {
     "preset": "react-native",
