--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,17 +49,20 @@ repositories {
 }
 
 dependencies {
-    implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
-    implementation "com.android.installreferrer:installreferrer:${safeExtGet('installReferrerVersion', '1.1.2')}"
-    def firebaseIidVersion = safeExtGet('firebaseIidVersion', null)
-    if(firebaseIidVersion){
-        implementation platform("com.google.firebase:firebase-bom:${safeExtGet("firebaseBomVersion", "25.12.2")}")
-        implementation "com.google.firebase:firebase-iid:${safeExtGet("firebaseIidVersion", "20.2.3")}"
-    }else{
-        def iidVersion = safeExtGet('googlePlayServicesIidVersion', safeExtGet('googlePlayServicesVersion', '17.0.0'))
-        implementation "com.google.android.gms:play-services-iid:$iidVersion"
-    }
+  implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
+  implementation "com.android.installreferrer:installreferrer:${safeExtGet('installReferrerVersion', '1.1.2')}"
+  def firebaseBomVersion = safeExtGet("firebaseBomVersion", null)
+  def firebaseIidVersion = safeExtGet('firebaseIidVersion', null)
+  if (firebaseBomVersion) {
+      implementation platform("com.google.firebase:firebase-bom:${firebaseBomVersion}")
+      implementation "com.google.firebase:firebase-iid"
+  } else if(firebaseIidVersion){
+      implementation "com.google.firebase:firebase-iid:${firebaseIidVersion}"
+  }else{
+      def iidVersion = safeExtGet('googlePlayServicesIidVersion', safeExtGet('googlePlayServicesVersion', '17.0.0'))
+      implementation "com.google.android.gms:play-services-iid:$iidVersion"
+  }
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
-    testImplementation "org.mockito:mockito-core:3.3.3"
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+  testImplementation "org.mockito:mockito-core:3.3.3"
 }
