--- a/example/package.json
+++ b/example/package.json
@@ -22,22 +22,19 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
-    "appium": "^1.20.0",
+    "appium": "1.18.3",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1",
-    "selenium-appium": "^1.0.0",
-    "selenium-webdriver": "^4.0.0-alpha.8"
+    "selenium-appium": "0.0.15",
+    "selenium-webdriver": "4.0.0-alpha.7"
   },
   "jest": {
     "preset": "react-native",
     "setupFiles": [
       "./jest.setup.js"
     ]
-  },
-  "resolutions": {
-    "appium/appium-windows-driver": "1.13.0"
   }
 }
