--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "example:install": "yarn && cd example && yarn && cd .. && yarn dev-sync",
     "example:install:pods": "cd example/ios && pod install",
     "example:android": "cd example && yarn android",
-    "example:android:build": "cd example/android && ./gradlew assembleDebug --debug --info --stacktrace --scan",
+    "example:android:build": "cd example/android && ./gradlew assembleDebug",
     "example:ios": "cd example && yarn ios",
     "example:ios:build": "cd example/ios && xcodebuild CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ -workspace example.xcworkspace -configuration Debug -scheme example -sdk iphonesimulator -arch x86_64 ONLY_ACTIVE_ARCH=YES | xcpretty",
     "example:packager": "cd example && yarn start",
