--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.67.3",
-    "react-native-device-info": "github:react-native-device-info/react-native-device-info",
     "react-native-macos": "^0.66.0",
     "react-native-windows": "0.67.3"
   },
@@ -24,6 +23,11 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.3",
+    "@types/react": "^18.0.25",
+    "@types/react-native": "^0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
     "appium": "1.18.3",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
@@ -33,10 +37,19 @@
     "patch-package": "^6.4.7",
     "react-test-renderer": "17.0.2",
     "selenium-appium": "0.0.15",
-    "selenium-webdriver": "4.0.0-alpha.7"
+    "selenium-webdriver": "4.0.0-alpha.7",
+    "typescript": "^4.9.3"
   },
   "jest": {
     "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
     "setupFiles": [
       "./jest.setup.js"
     ]
