--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-device-info": "link:../"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
