RN-0.73 change Android configs for RN 0.73 compatibility

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,7 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
+    namespace = "com.learnium.RNDeviceInfo"
     compileSdkVersion safeExtGet('compileSdkVersion', 30)
 
     defaultConfig {
