--- a/.github/workflows/windows-app-test.yml
+++ b/.github/workflows/windows-app-test.yml
@@ -1,27 +1,31 @@
 name: Windows CI
 on: [pull_request]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   run-windows-tests:
     name: Build & run tests
-    runs-on: windows-2019
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       name: Checkout Code
 
     - name: Setup Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: 18
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1
       with:
-        vs-version: 16.5
+        vs-version: '[17.6,18)'
 
     - name: Check base node modules cache
-      uses: actions/cache@v1
+      uses: actions/cache@v3
       id: yarn-base-cache
       with:
         path: ./node_modules
@@ -35,7 +39,7 @@ jobs:
         command: yarn --pure-lockfile
 
     - name: Check example node modules cache
-      uses: actions/cache@v1
+      uses: actions/cache@v3
       id: yarn-example-cache
       with:
         path: ./example/node_modules
