macos-support: Code cleanup * Podfile update * Added macos scripts

--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "shipit": "yarn clean && semantic-release",
     "example:install": "yarn && cd example && yarn && cd .. && yarn dev-sync",
     "example:install-windows": "yarn && cd example && yarn && cd .. && yarn dev-sync-windows",
-    "example:install:pods": "cd example/ios && pod install",
+    "example:install-ios:pods": "cd example/ios && pod install",
+    "example:install-macos:pods": "cd example/macos && pod install",
     "example:android": "cd example && yarn android",
     "example:android:build": "cd example/android && ./gradlew assembleDebug",
     "example:ios": "cd example && yarn ios --simulator 'iPhone 14'",
     "example:ios:build": "cd example/ios && xcodebuild CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ -workspace example.xcworkspace -configuration Debug -scheme example -sdk iphonesimulator -arch x86_64 ONLY_ACTIVE_ARCH=YES | xcpretty",
     "example:windows": "cd example && yarn windows",
+    "example:macos": "cd example && yarn macos",
     "example:packager": "cd example && yarn start",
     "test": "jest",
     "precommit": "lint-staged && yarn analyze",
@@ -115,6 +117,7 @@
     "react": "17.0.2",
     "react-native": "^0.67.3",
     "react-native-builder-bob": "^0.18.2",
+    "react-native-macos": "^0.66.0",
     "react-native-windows": "^0.67.3",
     "react-test-renderer": "^17.0.1",
     "semantic-release": "^19.0.2",
