--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -1,60 +1,93 @@
-require_relative '../node_modules/react-native/scripts/react_native_pods'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+# Resolve react_native_pods.rb with node to allow for hoisting
+require Pod::Executable.execute_command('node', ['-p',
+'require.resolve(
+    "react-native/scripts/react_native_pods.rb",
+    {paths: [process.argv[1]]},
+  )', __dir__]).strip
 
-platform :ios, '11.0'
+platform :ios, min_ios_version_supported
+prepare_react_native_project!
+
+# If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
+# because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
+#
+# To fix this you can also exclude `react-native-flipper` using a `react-native.config.js`
+# ```js
+# module.exports = {
+#   dependencies: {
+#     ...(process.env.NO_FLIPPER ? { 'react-native-flipper': { platforms: { ios: null } } } : {}),
+# ```
+flipper_config = ENV['NO_FLIPPER'] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled
+
+linkage = ENV['USE_FRAMEWORKS']
+if linkage != nil
+	Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
+	use_frameworks! :linkage => linkage.to_sym
+end
+
 
 target 'example' do
-  config = use_native_modules!
+	config = use_native_modules!
 
-  use_react_native!(
-    :path => config[:reactNativePath],
-    # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => false
-  )
+	# Flags change depending on the env values.
+	flags = get_default_flags()
 
-  target 'example-app-extension' do
-    inherit! :complete
-  end
+	use_react_native!(
+		:path => config[:reactNativePath],
+		# Hermes is now enabled by default. Disable by setting this flag to false.
+		:hermes_enabled => flags[:hermes_enabled],
+		:fabric_enabled => flags[:fabric_enabled],
+		# Enables Flipper.
+		#
+		# Note that if you have use_frameworks! enabled, Flipper will not work and
+		# you should disable the next line.
+		:flipper_configuration => flipper_config,
+		# An absolute path to your application root.
+		:app_path => "#{Pod::Config.instance.installation_root}/.."
+	)
 
-  target 'exampleTests' do
-    inherit! :complete
-    # Pods for testing
-  end
+	target 'example-app-extension' do
+		inherit! :complete
+	end
 
-  # Enables Flipper.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable the next line.
-  use_flipper!()
+	target 'exampleTests' do
+		inherit! :complete
+		# Pods for testing
+	end
 
-  post_install do |installer|
-    react_native_post_install(installer)
-    
-    installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-        config.build_settings["CC"] = "clang"
-        config.build_settings["LD"] = "clang"
-        config.build_settings["CXX"] = "clang++"
-        config.build_settings["LDPLUSPLUS"] = "clang++"
-      end
-    end
-    
-    installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-        # Fix sharedApplication is unavailable: not available on iOS App Extension - Use view controller based solutions where appropriate instead
-        # https://stackoverflow.com/questions/52503400/sharedapplication-is-unavailable-not-available-on-ios-app-extension-use-v
-        config.build_settings["APPLICATION_EXTENSION_API_ONLY"] = "NO"
-      end
-    end
 
-    # quiet non-module warnings - only interested in our own warnings
-    installer.pods_project.targets.each do |target|
-      if !target.name.include? "react-native-device-info"
-        target.build_configurations.each do |config|
-          config.build_settings["GCC_WARN_INHIBIT_ALL_WARNINGS"] = "YES"
-        end
-      end
-    end
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
-  end
+	post_install do |installer|
+		react_native_post_install(
+			installer,
+			config[:reactNativePath],
+			:mac_catalyst_enabled => false
+		)
+
+		installer.pods_project.targets.each do |target|
+			target.build_configurations.each do |config|
+				config.build_settings["CC"] = "clang"
+				config.build_settings["LD"] = "clang"
+				config.build_settings["CXX"] = "clang++"
+				config.build_settings["LDPLUSPLUS"] = "clang++"
+			end
+		end
+
+		installer.pods_project.targets.each do |target|
+			target.build_configurations.each do |config|
+				# Fix sharedApplication is unavailable: not available on iOS App Extension - Use view controller based solutions where appropriate instead
+				# https://stackoverflow.com/questions/52503400/sharedapplication-is-unavailable-not-available-on-ios-app-extension-use-v
+				config.build_settings["APPLICATION_EXTENSION_API_ONLY"] = "NO"
+			end
+		end
+
+		# quiet non-module warnings - only interested in our own warnings
+		installer.pods_project.targets.each do |target|
+			if !target.name.include? "react-native-device-info"
+				target.build_configurations.each do |config|
+					config.build_settings["GCC_WARN_INHIBIT_ALL_WARNINGS"] = "YES"
+				end
+			end
+		end
+		__apply_Xcode_12_5_M1_post_install_workaround(installer)
+	end
 end
