--- a/example/package.json
+++ b/example/package.json
@@ -14,25 +14,32 @@
     "prepare": "patch-package"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.67.3",
+    "react": "18.2.0",
+    "react-native": "0.72.4",
     "react-native-device-info": "github:react-native-device-info/react-native-device-info",
-    "react-native-windows": "0.67.3"
+    "react-native-windows": "0.72.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "appium": "1.18.3",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-config": "^0.66.2",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "patch-package": "^6.4.7",
-    "react-test-renderer": "17.0.2",
-    "selenium-appium": "0.0.15",
-    "selenium-webdriver": "4.0.0-alpha.7"
+    "@babel/core": "^7.22.19",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/runtime": "^7.22.15",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.11",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/react": "^18.2.21",
+    "@types/react-test-renderer": "^18.0.1",
+    "appium": "2.1.3",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.49.0",
+    "jest": "^29.7.0",
+    "metro-config": "^0.79.0",
+    "metro-react-native-babel-preset": "0.77.0",
+    "patch-package": "^8.0.0",
+    "prettier": "^3.0.3",
+    "react-test-renderer": "18.2.0",
+    "selenium-appium": "1.0.2",
+    "selenium-webdriver": "4.12.0",
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native",
@@ -41,6 +48,9 @@
     ]
   },
   "resolutions": {
-    "appium/appium-windows-driver": "1.13.0"
+    "appium/appium-windows-driver": "2.12.3"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
