--- a/package.json
+++ b/package.json
@@ -94,37 +94,34 @@
     "react-native": "*"
   },
   "devDependencies": {
-    "@react-native-community/eslint-config": "^3.0.1",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@react-native/eslint-config": "^0.72.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^10.0.4",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^9.0.1",
-    "@semantic-release/release-notes-generator": "^10.0.3",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@types/jest": "^27.4.1",
-    "@types/react": "17.0.39",
-    "@types/react-native": "^0.67.2",
-    "eslint": "^7",
-    "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "lint-staged": "^12.3.4",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "react": "17.0.2",
-    "react-native": "^0.67.3",
-    "react-native-builder-bob": "^0.18.2",
-    "react-native-windows": "^0.67.3",
-    "react-test-renderer": "^17.0.1",
-    "semantic-release": "^19.0.2",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.6.2"
+    "@semantic-release/github": "^9.0.6",
+    "@semantic-release/npm": "^10.0.6",
+    "@semantic-release/release-notes-generator": "^11.0.7",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.4",
+    "@types/react": "18.2.21",
+    "eslint": "^8",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^14.0.1",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react": "18.2.0",
+    "react-native": "^0.72.4",
+    "react-native-builder-bob": "^0.21.3",
+    "react-native-windows": "^0.72.9",
+    "react-test-renderer": "^18.2.0",
+    "semantic-release": "^21.1.1",
+    "ts-jest": "^29.1.1",
+    "typescript": "^4.8.4"
   },
   "resolutions": {
-    "@types/react": "17.0.39"
-  },
-  "eslintConfig": {
-    "extends": "@react-native-community"
+    "@types/react": "18.2.21",
+    "wrap-ansi": "^7.0.0"
   },
   "react-native-builder-bob": {
     "source": "src",
