--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "module": "lib/module/index.js",
   "files": [
     "__tests__/",
-    "android/",
-    "ios/",
-    "lib/",
-    "src/",
-    "jest/",
-    "web/",
-    "windows/",
-    "RNDeviceInfo.podspec",
+    "android",
+    "ios",
+    "lib",
+    "src",
+    "jest",
+    "web",
+    "cpp",
+    "windows",
+    "*.podspec",
     "babel.config.js",
     "jest.config.js",
     "jest.setup.ts"
@@ -91,10 +92,11 @@
   ],
   "license": "MIT",
   "peerDependencies": {
+    "react": "*",
     "react-native": "*"
   },
   "devDependencies": {
-    "@react-native-community/eslint-config": "^3.0.1",
+    "@react-native/eslint-config": "^0.73.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
@@ -102,29 +104,33 @@
     "@semantic-release/npm": "^9.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@testing-library/react-hooks": "^7.0.2",
-    "@types/jest": "^27.4.1",
-    "@types/react": "17.0.39",
-    "@types/react-native": "^0.67.2",
-    "eslint": "^7",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@types/jest": "^29.5.5",
+    "@types/react": "16.9.0",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
     "lint-staged": "^12.3.4",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "react": "17.0.2",
-    "react-native": "^0.67.3",
-    "react-native-builder-bob": "^0.18.2",
+    "prettier": "^3.0.3",
+    "react": "18.2.0",
+    "react-native": "0.73.5",
+    "react-native-builder-bob": "^0.23.2",
     "react-native-windows": "^0.67.3",
-    "react-test-renderer": "^17.0.1",
+    "react-test-renderer": "18.2.0",
     "semantic-release": "^19.0.2",
     "ts-jest": "^27.1.3",
-    "typescript": "^4.6.2"
+    "typescript": "^5.2.2"
   },
   "resolutions": {
-    "@types/react": "17.0.39"
+    "@types/react": "17.0.21"
   },
   "eslintConfig": {
-    "extends": "@react-native-community"
+    "root": true,
+    "extends": [
+      "@react-native",
+      "prettier"
+    ]
   },
   "react-native-builder-bob": {
     "source": "src",
@@ -132,7 +138,20 @@
     "targets": [
       "commonjs",
       "module",
-      "typescript"
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
     ]
+  },
+  "codegenConfig": {
+    "name": "RNDeviceInfoSpec",
+    "type": "modules",
+    "jsSrcsDir": "src",
+    "android": {
+      "javaPackageName": "com.learnium.RNDeviceInfo"
+    }
   }
 }
