--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "src",
     "jest",
     "web",
-    "cpp",
     "windows",
-    "*.podspec",
+    "RNDeviceInfo.podspec",
     "babel.config.js",
     "jest.config.js",
     "jest.setup.ts"
@@ -105,10 +104,10 @@
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^29.5.5",
-    "@types/react": "16.9.0",
-    "eslint": "^8.51.0",
+    "@types/react": "17.0.39",
+    "eslint": "^7",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
     "husky": "^7.0.4",
     "jest": "^29.7.0",
     "lint-staged": "^12.3.4",
@@ -123,7 +122,7 @@
     "typescript": "^5.2.2"
   },
   "resolutions": {
-    "@types/react": "17.0.21"
+    "@types/react": "17.0.39"
   },
   "eslintConfig": {
     "root": true,
