--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         def buildGradleVersion = ext.has('buildGradlePluginVersion') ? ext.get('buildGradlePluginVersion') : '4.2.0'
 
         dependencies {
-            classpath "com.android.tools.build:gradle:$buildGradleVersion"
+            classpath("com.android.tools.build:gradle:$buildGradleVersion")
         }
     }
 }
@@ -22,7 +22,7 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
-    compileSdkVersion safeExtGet('compileSdkVersion', 34)
+    compileSdkVersion = safeExtGet('compileSdkVersion', 34)
     
     def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION
     // Check AGP version for backward compatibility reasons
@@ -31,14 +31,14 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion safeExtGet('minSdkVersion', 16)
-        targetSdkVersion safeExtGet('targetSdkVersion', 28)
+        minSdkVersion = safeExtGet('minSdkVersion', 16)
+        targetSdkVersion = safeExtGet('targetSdkVersion', 28)
 
-        versionCode 2
-        versionName "1.1"
+        versionCode = 2
+        versionName = "1.1"
     }
     lintOptions {
-       warning 'InvalidPackage', 'MissingPermission'
+       warning = 'InvalidPackage', 'MissingPermission'
     }
     testOptions {
         unitTests.returnDefaultValues = true
@@ -50,26 +50,26 @@ repositories {
     google()
     maven {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-        url "$rootDir/../node_modules/react-native/android"
+        url = "$rootDir/../node_modules/react-native/android"
     }
 }
 
 dependencies {
-  implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
-  implementation "com.android.installreferrer:installreferrer:${safeExtGet('installReferrerVersion', '1.1.2')}"
+  implementation("com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}")
+  implementation("com.android.installreferrer:installreferrer:${safeExtGet('installReferrerVersion', '1.1.2')}")
   def firebaseBomVersion = safeExtGet("firebaseBomVersion", null)
   def firebaseIidVersion = safeExtGet('firebaseIidVersion', null)
   def googlePlayServicesIidVersion = safeExtGet('googlePlayServicesIidVersion', null)
 
   if (firebaseBomVersion) {
-      implementation platform("com.google.firebase:firebase-bom:${firebaseBomVersion}")
-      implementation "com.google.firebase:firebase-iid"
+      implementation(platform("com.google.firebase:firebase-bom:${firebaseBomVersion}"))
+      implementation("com.google.firebase:firebase-iid")
   } else if(firebaseIidVersion){
-      implementation "com.google.firebase:firebase-iid:${firebaseIidVersion}"
+      implementation("com.google.firebase:firebase-iid:${firebaseIidVersion}")
   } else if(googlePlayServicesIidVersion){
-      implementation "com.google.android.gms:play-services-iid:$googlePlayServicesIidVersion"
+      implementation("com.google.android.gms:play-services-iid:$googlePlayServicesIidVersion")
   }
 
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-  testImplementation "org.mockito:mockito-core:3.6.28"
+  testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
+  testImplementation("org.mockito:mockito-core:3.6.28")
 }
