--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -23,20 +23,20 @@ allprojects {
     repositories {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url("$rootDir/../node_modules/react-native/android")
+            url = "$rootDir/../node_modules/react-native/android"
         }
         maven {
             // Android JSC is installed from npm
-            url("$rootDir/../node_modules/jsc-android/dist")
+            url = "$rootDir/../node_modules/jsc-android/dist"
         }
         mavenCentral {
             // We don't want to fetch react-native from Maven Central as there are
             // older versions over there.
             content {
-                excludeGroup "com.facebook.react"
+                excludeGroup("com.facebook.react")
             }
         }
         google()
-        maven { url 'https://www.jitpack.io' }
+        maven { url = 'https://www.jitpack.io' }
     }
 }
